--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,5 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Pretendard-Regular", sans-serif;
+  transition: background-color 0.5s, color 0.5s;
 }
