feat: hide scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,9 @@
   box-sizing: border-box;
   font-family: "Pretendard-Regular", sans-serif;
   transition: background-color 0.5s, color 0.5s;
+
+  scrollbar-width: none;
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
